add sign up logic
